--- a/index.html
+++ b/index.html
@@ -4,38 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">    
     <title>Breakout</title>
 </head>
 <body>
-    <div id="iframe-container">
+    <div class="iframe-container">
 
-        <div id="initial-screen">
-            <h1 id="title">BREAKOUT!</h1>
-            <h2 id="subtitle">Select your difficult</h2>
+        <div class="initial-screen">
+            <h1 class="title">BREAKOUT!</h1>
+            <h2 class="subtitle">Select your difficult</h2>
             <button id="easy" class="difficult-button">Easy</button>
             <button id="normal" class="difficult-button">Normal</button>
             <button id="hard" class="difficult-button">Hard</button>
         </div>
 
-        <div id="get-ready-screen">
-            <h1 id="get-ready"></h1>
+        <div class="get-ready-screen">
+            <h1 class="get-ready-display"></h1>
         </div>
 
-        <div id="game-screen">
-            <div id="score-space">
-                <div>Score: </div>
-                <div id="score"></div>
+        <div class="game-screen">
+            <div class="game">
+                <div class="block block-1"></div>
+                <div class="block block-2"></div>
+                <div class="block block-3"></div>
+                <div class="block block-4"></div>
+                <div class="block block-5"></div>
+
+                <div class="block block-6"></div>
+                <div class="block block-7"></div>
+                <div class="block block-8"></div>
+                <div class="block block-9"></div>
+                <div class="block block-10"></div>
+
+                <div class="block block-11"></div>
+                <div class="block block-12"></div>
+                <div class="block block-13"></div>
+                <div class="block block-14"></div>
+                <div class="block block-15"></div>
+
+                <div class="user"></div>
+
+                <div class="ball"></div>
             </div>
+
+            <div class="info">
+                <div class="controls">
+                    <button class="control-button" id="left-control" onclick="moveUserByClick('left')">&lt;</button>
+                    <button class="control-button" id="right-control" onclick="moveUserByClick('right')">&gt;</button>
+                </div>
+                <div class="scores">
+                    <div class="score-label">Score</div>
+                    <div class="score"></div>
+                </div>
+            </div>
+
         </div>
 
-        <div id="post-game-screen">            
-            <h1 id="final-score"></h1>
-            <h1 id="message"></h1>
-            <button id="play-again">Play Again!</button>
+        <div class="post-game-screen">            
+            <h1 class="final-score"></h1>
+            <h1 class="message"></h1>
+            <button class="play-again-button">Play Again!</button>
         </div>
+
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
